--- a/index.html
+++ b/index.html
@@ -107,5 +107,18 @@
 
         startGame();
     </script>
+
+<!-- Adsterra Direct Ad Link -->
+<script type='text/javascript'>
+    atOptions = {
+        'key' : '650632a8971e1bf1255a0a16c7c775c8',
+        'format' : 'direct',
+        'height' : 250,
+        'width' : 300,
+        'params' : {}
+    };
+    document.write('<scr' + 'ipt type="text/javascript" src="https://lullfork.com/un8ffbc85c/invoke.js"></scr' + 'ipt>');
+</script>
+
 </body>
 </html>
